--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,12 @@
     />
 
     <meta property="og:title" content="EOS free & open source icons" />
-    <meta property="og:type" content='website' />
-    <meta property="og:url" content='https://icons.eosdesignsystem.com/' />
-    <meta property="og:image" content='https://res.cloudinary.com/eosdesignsystem/image/upload/v1600948913/EOS/Social/eos-icons-social-media.jpg' />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://icons.eosdesignsystem.com/" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/eosdesignsystem/image/upload/v1600948913/EOS/Social/eos-icons-social-media.jpg"
+    />
 
     <meta name="theme-color" content="#000000" />
     <meta
