opengraph url mismatch fix

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="EOS free & open source icons" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://icons.eosdesignsystem.com/" />
+    <meta property="og:url" content="https://eos-icons.com/" />
     <meta
       property="og:image"
       content="https://res.cloudinary.com/eosdesignsystem/image/upload/v1600948913/EOS/Social/eos-icons-social-media.jpg"
