New: added outlined toggle for the icons

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
       property="og:image"
       content="https://res.cloudinary.com/eosdesignsystem/image/upload/v1600948913/EOS/Social/eos-icons-social-media.jpg"
     />
+    <!-- // TODO: Once the new outline version is released, remove this part and add the CDN link to it -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/_eos-icons-outlined.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/eos-icons/dist/css/eos-icons.css"
+    />
 
     <meta name="theme-color" content="#000000" />
     <!--
