--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
 
     <meta property="og:title" content="EOS free & open source icons" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://eos-icons.com/" />
-    <meta property="og:image" content="https://res.cloudinary.com/eosdesignsystem/image/upload/v1600948913/EOS/Social/eos-icons-social-media.jpg" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/eos-icons@latest/dist/css/eos-icons.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/eos-icons@latest/dist/css/eos-icons-outlined.css" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/eosdesignsystem/image/upload/v1600948913/EOS/Social/eos-icons-social-media.jpg"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/eos-icons@latest/dist/css/eos-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/eos-icons@latest/dist/css/eos-icons-outlined.css"
+    />
 
     <meta name="theme-color" content="#000000" />
     <!--
@@ -29,9 +40,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>EOS Icons</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -47,17 +58,14 @@
 
     <!-- Structured data for SEO improvement -->
     <script type="application/ld+json">
-        {
-            "@context": "http://schema.org",
-            "@type": "Organization",
-            "name": "EOS UI/UX Solutions",
-            "url": "https://eos-icons.com",
-            "address": "",
-            "sameAs": [
-                "https://twitter.com/eosdesignsystem"
-            ]
-        }
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "EOS UI/UX Solutions",
+        "url": "https://eos-icons.com",
+        "address": "",
+        "sameAs": ["https://twitter.com/eosdesignsystem"]
+      }
     </script>
-</body>
-
+  </body>
 </html>
