Added necessary meta tags including Primary Meta Tags and Twitter Meta Tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,39 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="EOS free & open source icons" />
+    <meta
+      name="description"
+      content="Commercial, non-commercial, use them as you please. EOS icons comes with an MIT license, has an open source community, and welcomes your collaboration too."
+    />
 
-    <meta property="og:title" content="EOS free & open source icons" />
+    <!-- Facebook Meta Tags -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://eos-icons.com/" />
+    <meta property="og:title" content="EOS free & open source icons" />
+    <meta
+      property="og:description"
+      content="Commercial, non-commercial, use them as you please. EOS icons comes with an MIT license, has an open source community, and welcomes your collaboration too."
+    />
     <meta
       property="og:image"
       content="https://res.cloudinary.com/eosdesignsystem/image/upload/v1600948913/EOS/Social/eos-icons-social-media.jpg"
     />
+
+    <!-- Twitter Meta Tags -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://eos-icons.com/" />
+    <meta property="twitter:title" content="EOS free & open source icons" />
+    <meta
+      property="twitter:description"
+      content="Commercial, non-commercial, use them as you please. EOS icons comes with an MIT license, has an open source community, and welcomes your collaboration too."
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/eosdesignsystem/image/upload/v1600948913/EOS/Social/eos-icons-social-media.jpg"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/eos-icons@latest/dist/css/eos-icons.css"
